# nagios-status-api

./: .gitignore  AGENTS.md  README.md  SECURITY.md  envrc.example  mise.toml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml
nagios_status_api/: __init__.py  __main__.py
nagios_status_api/static/: app.js  styles.css
tests/: test_cli.py  test_lifespan.py
