[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nagios-status-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
nagios-status-api = "nagios_status_api:main"
nagios-status-api-server = "nagios_status_api:serve"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.6", "ty>=0.0.23"]
